2008-04-11  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #517134

	* gui/dialogs/comp-editor.c: (add_to_bar),
	(menu_insert_attachment_cb), (menu_insert_attach_recent_docs_cb),
	(comp_editor_init): Code re-factoring. Extend the 'Insert' menu to
	show a "Recent Documents" submenu (to quickly add them as
	attachments). New callback to handle these actions. 

2008-04-07  Ondrej Jirman  <megous@megous.com>

	** Fix for bug #525234

	* gui/Makefile.am:
	* gui/dialogs/Makefile.am: Install more include files that are useful
	to the out of tree evolution plugins.

2008-04-02  Matthew Barnes  <mbarnes@redhat.com>

	* gui/Makefile.am:
	Remove CORBA rules for the old composer.

	* gui/itip-utils.c (comp_from), (comp_to_list), (comp_subject),
	(comp_content_type), (comp_filename), (comp_description),
	(append_cal_attachments), (itip_send_comp), (reply_to_calendar_comp):
	Adapt to new Bonobo-less composer widget.

2008-03-31  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #346555

	* gui/dialogs/calendar-setup.c: (eccp_get_source_color): 
	Fixed a mnemonic conflict. 

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #517492

	* gui/dialogs/calendar-setup.c: (calendar_setup_edit_calendar),
	(calendar_setup_edit_task_list), (calendar_setup_edit_memo_list):
	Set proper dialog caption with New or Properties.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #438613

	* calendar.error.xml: New message "prompt-read-only-cal-editor".
	* gui/dialogs/comp-editor.c: (prompt_and_save_changes),
	(menu_file_save_cb): Use different read-only message when checking
	from contact editor and from calendar UI.

2008-03-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #512543

	* gui/e-day-view.c:
	* gui/e-week-view-event-item.c:
	* gui/e-calendar-view.c:
	* gui/e-calendar-view.h:
	* gui/e-week-view-main-item.c:
	* gui/e-day-view-time-item.c:
	* gui/e-day-view-top-item.c:
	* gui/e-day-view-main-item.c:
	Get rid of ENABLE_CAIRO define.
